class_name SteamLobbyEntry
extends MarginContainer

@onready var name_label: Label = $HBoxContainer/NameLabel
@onready var owner_label: Label = $HBoxContainer/OwnerLabel
@onready var player_count_label: Label = $HBoxContainer/PlayerCountLabel
@onready var join_button: Button = $HBoxContainer/JoinButton
